# pyodm

./: .gitignore  README.md  ReadMe.md  deploy.bat  pyproject.toml  setup.cfg
example/custom_odm_factory/: README.md  custom.xml  data.xml  example.py
example/custom_odm_factory/custom/: subject_form.py  subject_item.py
example/database/: README.md  main.py  subject_data.xml  subject_data_resource.py
example/database/mappers/: subject_mapper.py
example/find_odm/: example.py
example/json_factory/: README.md  eclinical-dataentry.xsd  example.py  submit-data2.json
example/odm_method/: README.md  example.py
example/specification_factory/: example.py
example/xsd_factory/: example.py
src/: pip_requirement.bat
src/pyodm/: .gitignore  TODO  data_source.py  exceptions.py  odm.py  odm_source.py  odm_validator.py
src/pyodm/core/data_loader/: forest_data_loader.py  json_path_loader.py  xml_path_loader.py
src/pyodm/core/resource/: database_resource.py  forest_resource.py  xml_path_resoruce.py
src/pyodm/core/source/: abstract_database_source.py  path_source.py
src/pyodm/factory/: abstract_assemble_factory.py  abstract_cdisc_factory.py  abstract_cdisc_xml_factory.py  abstract_data_object_factory.py  abstract_hierarchy_factory.py  cdisc_forest_factory.py  cdisc_json_factory.py  cdisc_listable_factory.py  cdisc_registry.py  cdisc_specification_factory.py  cdisc_xml_spec_factory.py  cdisc_xml_specification_factory.py  cdsic_v2_factory.py  cdsic_xml_v2_factory.py  cdsic_xml_xsd_factory.py  cdsic_xsd_factory.py
src/pyodm/io/: writer.py  xml_writer.py
src/pyodm/model/: __init__.py
src/pyodm/resources/: SpecificationV2.xml
src/pyodm/tests/: test_forest.py
src/pyodm/unit_tests/: test_forest.py  test_odm.py  test_odm_factory.py
src/pyodm/utils/: class_utils.py  dict_utils.py  etree_utils.py  finder.py  forest.py  generate_cdisc_model.py  generate_py.py  node.py  odm_utils.py  path_utils.py  stream.py  validator.py
src/pyodm/utils/search/: dfs.py  (+1 more)
src/pyodmv2/unit_tests/: test_forest.py  test_odm.py
src/pyodmv2/utils/: forest.py
src/pyodmv2/xml_defintion/: odm.xml  odm_define.xml  odm_v2.py
(+574 files in other folders)
