[metadata]
name = pyodmv2
version = 1.0.0
author = thcpc
author_email = redcpc@163.com
description =  odm v2 tool
long_description = file: README.md
long_description_content_type = text/markdown
url = ""
project_urls =
    Bug Tracker = ""
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    lxml
    pytest
include_package_data = True
python_requires = >=3.9

[options.package_data]
* = *.yaml, resources/*.html

[options.packages.find]
where = src

