[metadata]
name = pyodm_cn
version = 1.0.3.2
author = thcpc
author_email = redcpc@163.com
description =  odm support tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thcpc/pyodm
project_urls =
    Bug Tracker = https://github.com/thcpc/pyodm
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    lxml
    pytest
    cjen
include_package_data = False
python_requires = >=3.9

[options.package_data]
pyodm =
    resources/*.xml
    model/v2/resources/schema/*.xsd

[options.packages.find]
where = src
exclude =
    pyodm.tests
    pyodm.tests.*
